# jago-rent-gadget

./: .dockerignore  .gitignore  Dockerfile-backend  Dockerfile-frontend  Makefile  README.md  docker-compose.yaml  pyproject.toml  sql_app.db
.github/workflows/: CI.yaml
.streamlit/: config.toml
ansible/: ansible.cfg
ansible/inventory/: default_yacloud_compute.yml
ansible/playbooks/dev/docker/: main.yml
ansible/playbooks/dev/nginx/: main.yml
ansible/plugins/inventory/: yacloud_compute.py
configs/: config.yaml
data/: sql_app.db
internal/: auth.py  main.py  utils.py
internal/data/: auth.py  database.py  s3storage.py  storage.py
internal/exceptions/: s3_exception.py
internal/item/: models.py  router.py  schemas.py  service.py
internal/ui/: app.py  auth.py  main.py  manager.py  menu.py  utils.py
internal/ui/pages/: auth_page.py  create_page.py  home_page.py  homepage.py  trending.py  user_cards_page.py  user_page.py  welcome_page.py
internal/user/: auth.py  models.py  router.py  schemas.py  service.py
tests/e2e/: conftest.py
tests/e2e/config/: auth.py  database.py
tests/e2e/item/: test_item.py
tests/e2e/user/: test_user.py
tests/unit/: util.py
tests/unit/config/: database.py
tests/unit/item/: test_unit_item.py  unit_test_item.py
tests/unit/user/: test_unit_user.py  test_user.py  unit_test_user.py
ui/: auth.py  manager.py  utils.py
ui/pages/: auth_page.py  create_page.py  home_page.py  user_cards_page.py  user_page.py  welcome_page.py
