[tool.poetry]
name = "internal"
version = "0.1.0"
description = "GadgetRent service by Jago team"
authors = [
    "Artem Murashko <art22m@yandex-team.ru>",
    "Iskander Nafikov <nafikov.iskander@mail.ru>",
    "Eduard Zaripov <>",
    "Vafig Khalilov <>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.85"
streamlit = "^1.33.0"
fastapi = "^0.110.1"
pydantic = "^2.7.0"
uvicorn = "^0.29.0"
firebase-admin = "^6.5.0"
pyrebase4 = "^4.7.1"
sqlalchemy = "^2.0.29"
httpx = "^0.27.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.1.2"
bandit = "^1.7.8"

[build-system]
requires = ["poetry-core", "sonarqube"]
build-backend = "poetry.core.masonry.api"

[tool.bandit.assert_used]
skips = ["tests/*"]
